--- a/Signature_Share/src/main/res/xml/file_paths.xml
+++ b/Signature_Share/src/main/res/xml/file_paths.xml
@@ -1,3 +1,3 @@
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="output_files" path="Signature_Share/" />
+<paths>
+    <files-path name="output_files" path="signatures/" />
 </paths>
